--- a/index.html
+++ b/index.html
@@ -127,4 +127,180 @@
   }
 
   /* スマホ・狭い画面用 */
-  @media (max
+  @media (max-width: 600px) {
+    .rings-row {
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 15px;
+      align-items: center;
+    }
+    .ring {
+      width: 60px;
+      height: 60px;
+      border-width: 3px;
+    }
+    .timer-wrapper {
+      width: 90vw;      /* 画面幅の90% */
+      max-width: 400px; /* 最大400px */
+      height: 110px;    /* 高さ少し小さく */
+    }
+    #display {
+      font-size: 2.6rem; /* 少し大きく */
+    }
+    .buttons {
+      gap: 10px;
+    }
+    button {
+      flex: 1 1 100%;
+      max-width: none;
+    }
+    #laps {
+      width: 100%;
+      max-height: 140px;
+    }
+  }
+
+  /* 縦画面専用 Portrait向けにさらに微調整 */
+  @media (max-width: 600px) and (orientation: portrait) {
+    .timer-wrapper {
+      width: 95vw;
+      max-width: none;
+      height: 100px;
+    }
+    #display {
+      font-size: 3rem;
+    }
+  }
+</style>
+</head>
+<body>
+<canvas id="bg"></canvas>
+<div class="container">
+  <div class="rings-row" aria-label="Timer rings">
+    <div class="ring ring1" title="1/10000 sec"></div>
+    <div class="ring ring2" title="1/1000 sec"></div>
+    <div class="ring ring3" title="1/100 sec"></div>
+    <div class="ring ring4" title="1/10 sec"></div>
+    <div class="ring ring5" title="1 sec"></div>
+    <div class="ring ring6" title="1 min"></div>
+    <div class="ring ring7" title="1 hour"></div>
+  </div>
+  <div class="timer-wrapper" role="timer" aria-live="polite" aria-atomic="true">
+    <div id="display">00:00.0000</div>
+  </div>
+  <div class="buttons">
+    <button type="button" onclick="startTimer()">Start</button>
+    <button type="button" onclick="stopTimer()">Stop</button>
+    <button type="button" onclick="resetTimer()">Reset</button>
+    <button type="button" onclick="lap()">Lap</button>
+  </div>
+  <div id="laps" aria-live="polite" aria-relevant="additions"></div>
+</div>
+
+<script>
+let startTime;
+let elapsed = 0;
+let animationFrame;
+let lapCount = 0;
+const rings = document.querySelectorAll('.ring');
+
+function formatTime(ms) {
+  const totalSeconds = Math.floor(ms / 1000);
+  const minutes = String(Math.floor(totalSeconds / 60)).padStart(2,'0');
+  const seconds = String(totalSeconds % 60).padStart(2,'0');
+  const msec = Math.floor((ms % 1000) * 10);
+  return `${minutes}:${seconds}.${String(msec).padStart(4,'0')}`;
+}
+
+function updateDisplay(){
+  elapsed = performance.now() - startTime;
+  document.getElementById('display').textContent = formatTime(elapsed);
+  animationFrame = requestAnimationFrame(updateDisplay);
+}
+
+function startTimer(){
+  if(!animationFrame){
+    startTime = performance.now() - elapsed;
+    updateDisplay();
+    rings.forEach(ring => ring.style.animationPlayState = 'running');
+    document.querySelector('.timer-wrapper').style.animation = 'bounce 0.5s ease';
+  }
+}
+
+function stopTimer(){
+  if(animationFrame){
+    cancelAnimationFrame(animationFrame);
+    animationFrame = null;
+    rings.forEach(ring => ring.style.animationPlayState = 'paused');
+  }
+}
+
+function resetTimer(){
+  stopTimer();
+  elapsed = 0;
+  lapCount = 0;
+  document.getElementById('display').textContent = formatTime(0);
+  document.getElementById('laps').innerHTML = '';
+  rings.forEach(ring => {
+    const duration = getComputedStyle(ring).animationDuration;
+    ring.style.animation = 'none';
+    ring.offsetHeight; // リセットのため強制再描画
+    ring.style.animation = `spin ${duration} linear infinite paused`;
+  });
+}
+
+function lap(){
+  if(elapsed > 0){
+    lapCount++;
+    const lapTime = formatTime(elapsed);
+    const lapDiv = document.createElement('div');
+    lapDiv.textContent = `Lap ${lapCount}: ${lapTime}`;
+    document.getElementById('laps').prepend(lapDiv);
+    document.getElementById('laps').scrollTop = 0;
+  }
+}
+
+const canvas = document.getElementById('bg');
+const ctx = canvas.getContext('2d');
+let particles = [];
+
+function resizeCanvas() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+window.addEventListener('resize', resizeCanvas);
+resizeCanvas();
+
+function createParticles(count) {
+  particles = [];
+  for (let i = 0; i < count; i++) {
+    particles.push({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      r: Math.random() * 2 + 1.5,
+      dx: (Math.random() - 0.5) * 0.5,
+      dy: (Math.random() - 0.5) * 0.5,
+    });
+  }
+}
+
+function drawParticles() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.fillStyle = 'rgba(255, 255, 255, 0.07)';
+  for (let p of particles) {
+    ctx.beginPath();
+    ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+    ctx.fill();
+    p.x += p.dx;
+    p.y += p.dy;
+    if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
+    if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
+  }
+  requestAnimationFrame(drawParticles);
+}
+
+createParticles(120);
+drawParticles();
+</script>
+</body>
+</html>
